Final/css/styles.css
body {
  margin-top: 0.6249rem;
  /* background-color: #F5F5F5; */
  background: rgba(255, 255, 255, 1);

  /* padding: 10px; */
  padding-top: 0;
  /* padding: 0 20px ; */
  font-family: 'Roboto', sans-serif;
  width: 100%;
}

html {
  width: 100%;
}

/* Add your custom styles here */
.header img {
  max-height: 3.1251rem;
}

.btn-group button:not(:last-child) {
  border-left: none;
}

#tbody tr:last-child {
  border-bottom-left-radius: 0.625rem;
  border-bottom-right-radius: 0.625rem;
}

/* Optional: Add padding to the table body for better aesthetics */
.table-bordered {
  /* padding: 10px; */
  border-radius: 8px;
}


.title {
  font-weight: bold;
  font-size: 1.5rem;
  color: #333;
}

.total-seats {
  font-weight: bold;
}

/* .footer {
  margin-top: 3.1251rem;
} */


/* Add your custom styles here */
#india-svg {
  /* position: relative; */
  /* top: -15.6248rem; */

  /* border:0.1251rem solid red; */
  max-width: 630px;
  /* Ensure SVG fills the container */
  height: 630px;
  /* Maintain aspect ratio */
  /* border: 2px solid black; */
}

#map {
  pointer-events: none;
  /* max-width: 630px; Ensure SVG fills the container
  height: 630px;
  display: flex;
  justify-content: center; */
}

#map #containertool {
  pointer-events: auto;
}

#india-map {
  display: flex;
  justify-content: center;
}

#india-svg path {
  fill: #faf9f9;
  /* Default color for states */
  stroke: #000;
  /* Border color */
  stroke-width: 1;
  /* Border width */
  cursor: pointer;
  /* Change cursor on hover */
}


.navbar-brand {
  color: #ff4500;
  /* Adjusted color for 'results' */
}

.navbar-brand span {
  color: #228b22;
  /* Adjusted color for '2024.in' */
}

.nav-link {
  font-size: 1.5rem;
}

.navbar {
  border-bottom: 0.0624rem solid #667085;
  margin-bottom: 2.4999rem;
}

a {
  color: #344054;
  font-weight: 400;
}

.navbar-toggler-icon {
  background-color: #344054;
}

/* -----------------------Progress----------------*/

.ndaLegend {
  background-color: #FF9933;
  height: 15px;
  border-radius: 50%;
  width: 15px;
  display: inline-block;
}

.indiaLegend {
  background-color: #87CEEB;
  ;
  height: 15px;
  border-radius: 50%;
  width: 15px;
  display: inline-block;
}

.others {
  background-color: #EAECF0;
  ;
  height: 15px;
  border-radius: 50%;
  width: 15px;
  display: inline-block;
}

.label {
  margin-left: 2px;
  color: #666666;
  font-size: 15px;
  font-weight: 500;
}

.legend .legendLabel {
  width: max-content;
  margin-right: 5px;
}

#chartsContainer{
  width: 100%;
  display:flex;
  justify-content: center;
  flex-direction: column;
}
#bar-container {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  /* width: 100%; */
  /* background-color: #f3f3f3; */
  height: 28px;
  overflow: hidden;
  position: relative;
  padding: 0;
  margin: 0 0 ;
  max-width: 452px;
  /* border: 0.0624rem solid red; */
  display: flex;
  justify-self:center;
  box-shadow: 0px 2px 4px -2px rgba(16, 24, 40, 0.06) ,0px 4px 8px -2px rgba(16, 24, 40, 0.1);


  /* border-radius: 0.1875rem ; */
}

.bar {
  /* height: 2.4999rem; */
  text-align: right;
  display: flex;
  align-content: center;
  padding-right: 10px;
  color: white;
  /* float: left; */
  font-size: 12px;
  /* padding:10px 8px; */
  font-weight: 500;
  margin: 0;
}

.allianceName{
  height: 1.4377rem;
  position: relative;
  padding: 0 0.2499rem;
  display: flex;
  /* justify-content: center; */
  align-items: center;
  margin-bottom: 0.2499rem;
}

#word1 {
  position: absolute;
  left: 0;
  /* font-size: 1.25rem; */
  font-weight: 500;
  color: black;
  /* background-color: red; */
  /* width: 100px; */
}

#word2 {
  position: absolute;
  left: 50%;
  /* font-size: 1.25rem; */
  font-weight: 500;
}

#word3 {
  position: absolute;
  right: 0;
  /* font-size: 1.25rem; */
  font-weight: 500;
}

/* -------------------------------------------------------------- */

/* -------------------------Accordian----------------------- */
/* Custom CSS for the progress bar */
#carouselContainer {
  min-height: 220px;
  /* border-radius: 8px; */
}

#carouselProgress {
  background-color: #FF9933;
}

.toggleButton {
  font-size: 14px;
  font-weight: 600;
  color: #344054;
  border: none;
  background-color: transparent;
}

#carouselContainer table {
  border: none;
}

.carousel-indicators [data-bs-target] {
  background-color: gray;
}

.carousel-indicators .active {
  background-color: gray;
  /* Change this to your desired color */
}

.carousel-item {
  border-radius: 8px;
  padding: 11px 24px;
}

.carousel-item>div:first-of-type {
  /* Your styles here */
  font-size: 14px;
  color: #101828;
  font-weight: 600;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
#carouselExampleIndicators{
  z-index: 0;
}
#ndaCarousel{
  border-top:8px solid #FF9933;
}

#indiaCarousel {
  border-top: 8px solid #87CEEB;
}

#othersCarousel {
  border-top: 8px solid #EAECF0;
}

#carouselContainer th,
#carouselContainer td {
  /* width: 50%; */
  background: rgba(255, 255, 255, 1);
  ;
  border-bottom: 1px solid rgba(208, 213, 221, 1);
  width: 50%;
  /* text-align: center; */
}

@media (max-width: 576px) {
  .hide-on-small {
    visibility: hidden;
    position: absolute;
    border-bottom: none;
  }

  .hide-on-small th {
    border-bottom: none;
  }
}

.accordionTable th:first-child {
  text-align: left;
}

.accordionTable th:nth-child(2) {
  text-align: center;
}

.accordionTable tbody tr td:nth-child(2) {
  text-align: center;
}

.accordionTable {
  width: 100%;
  /* width: 245px; */
}

/* .accordionTable td:first-child 
  text-align: left;
} */
.hiding {
  display: none;
}

.progress {
  top: 0;
  left: 0;
  right: 0;
  /* margin-top: 6rem; */
  height: 8px;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

/* .carousel-control-next,.carousel-control-prev{
  top: 25%;
  height: 50%;
}
.carousel-control-next
{
  justify-content: flex-end;
   padding-right: 8px;
   

}
/* ... */

